fix: pip install path

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: Python 3.10
+    name: Python 3.12
     runs-on: ubuntu-22.04
 
     steps:
@@ -16,14 +16,9 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
-      - name: Install Dependencies
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 2
-          command: pip install -r report/src/report/requirements-dev.txt
+      - run: pip install -r report/requirements-dev.txt
 
       - name: Execute pytest
         run: pytest report/src/report --cov-report term-missing --cov=report/src/report
