--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -35,3 +35,10 @@ jobs:
         run: |
           docker build -f report/Dockerfile -t $REGISTRY/$REPOSITORY:latest report
           docker push $REGISTRY/$REPOSITORY:latest
+
+      - name: Update AWS lambda function
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: transactions-report
+        run: |
+          aws lambda update-function-code --function-name report --image-uri $REGISTRY/$REPOSITORY:latest
